refactor: altera models, services e controllers para usarem anotações Lombok para código mais limpo